@@ -228,6 +228,10 @@ Bug fixes
   sloppy query missed documents that exact query matched. 
   Fixed except when for repeating multiterms (e.g. "yes ho yes|no").
   (Robert Muir, Doron Cohen)
+
+* LUCENE-3841: Fix CloseableThreadLocal to also purge stale entries on
+  get(); this fixes certain cases where we were holding onto objects
+  for dead threads for too long (Matthew Bellew, Mike McCandless)
     
 Optimizations
 
